@startuml db
hide circle


    
entity "DimEmployeeJ" as emp {
    emp_id : number
    --
    *first_name : text(10)
    *last_name : text(15)
    --
}


entity "DimCustomer" as customer {
	customer_id : text(5)
--
    *company_name : text(40)
    *contact_name : text(30)
    *contact_title : text(30)
    *city : text(15)
    *postal_code : text(10)
    *region : text(15)
    *country_name_fr : text(15)
    *country_name_en : text(15)
--
}
entity "DimShipperJ" as shp{
    ship_id : number
    --
    *company_name : text(40)
    *phone : text(24)
    --
}

entity "DimProductJ" as prod {
    prod_id : number
    --
    name_fr : text(40)
    *name_en : text(40)
    *quantityPerUnit : text(20)
    *unitPrice : money
    *cat_id : number
    name_cat_fr : text(15)
    *name_cat_en : text(15)
    --
}
entity "FactOrder" as order{
    *order_id : number
    *product_key : number
    --
    *price : money
    *freight : money
    *quantity : number
    *shipper_key : number
    *ship_adress_key : number
    *employee_key : number
    *customer_key : text(5)
    *customer_address_key: number
    *order_date_key : number
    *required_date_key : number
    *shipped_date_key : number
    *is_online : bool
    --
}


entity "DimDate" as date {
    date_key : number
    --
    *date : date
    *day_of_week : number
    *day_of_week_name_fr : text(15)
    *day_of_week_name_en : text(15)
    *week_of_year : number
    *month : number
    *month_name_fr : text(15)
    *month_name_en : text(15)
    *year : number
    --
}


order::order_date_key --> date::date_key
order::required_date_key --> date::date_key
order::shipped_date_key --> date::date_key
order::product_key -up-> prod::prod_id
order::employee_key  -left-> emp::emp_id
order::shipper_key -left-> shp::ship_id
order::customer_key -right-> customer::customer_id

@endum